docs(swagger): add swagger annotations to all http handlers
